--- a/system-api/.env.testing
+++ b/system-api/.env.testing
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=testing
 APP_KEY=base64:gYb2CYSJZNiqSchbd48bbqcnog0d2jqo0ZrfTCdzM8U=
 APP_DEBUG=true
 APP_URL=http://localhost:1000
@@ -12,22 +12,17 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=db
-DB_PORT=3306
-DB_DATABASE=system_db_test
-DB_USERNAME=root
-DB_PASSWORD=root
-DB_ROOT_PASSWORD=root
+DB_CONNECTION=sqlite
+DB_DATABASE=:memory:
 
 DB_APP_USER=dbuser
 DB_APP_PASSWORD=3tFPY6GwkycNuKEJ
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=array
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
-SESSION_DRIVER=file
+QUEUE_CONNECTION=sync
+SESSION_DRIVER=array
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
