--- a/system-api/phpstan.neon
+++ b/system-api/phpstan.neon
@@ -10,6 +10,8 @@ parameters:
         - routes/
         - resources/views/
         - tests/
+    
+    parallel: false
 
     excludePaths:
         - %rootDir%/../../../vendor
