--- a/system-api/.env.example
+++ b/system-api/.env.example
@@ -5,6 +5,9 @@ APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost:1000
 
+CLIENT_URL=http://localhost:3000
+SANCTUM_STATEFUL_DOMAINS=localhost:3000
+
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
@@ -34,7 +37,7 @@ SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-SESSION_DOMAIN=null
+SESSION_DOMAIN=localhost
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
