--- a/system-api/composer.json
+++ b/system-api/composer.json
@@ -17,6 +17,7 @@
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
+        "phpstan/phpstan": "^1.11",
         "phpunit/phpunit": "^11.2.6"
     },
     "autoload": {
